--- a/templates/plugin_cpp/stream.j2
+++ b/templates/plugin_cpp/stream.j2
@@ -1,7 +1,7 @@
 {% if is_async %}
-void {{ plugin_name.upper_camel_case }}::{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endfor %}{{ name.upper_camel_case }}Callback callback)
+void {{ plugin_name.upper_camel_case }}::{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{% if param.name.lower_snake_case != "drone_id" %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endif %}{% endfor %}{{ name.upper_camel_case }}Callback callback)
 {
-    _impl->{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{{ param.name.lower_snake_case }}, {% endfor %}callback);
+    _impl->{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{% if param.name.lower_snake_case != "drone_id" %}{{ param.name.lower_snake_case }}, {% endif %}{% endfor %}callback);
 }
 {% endif %}
 
@@ -10,8 +10,8 @@ void {{ plugin_name.upper_camel_case }}::{% if not is_finite %}subscribe_{% endi
 std::vector<{% if not return_type.is_primitive %}{{ plugin_name.upper_camel_case }}::{% endif %}{{ return_type.inner_name }}>
 {% else %}
 {% if not return_type.is_primitive %}{{ plugin_name.upper_camel_case }}::{% endif %}{{ return_type.name }}
-{%endif -%} {{ plugin_name.upper_camel_case }}::{{ name.lower_snake_case }}({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}{% if not loop.last %}, {% endif %}{% endfor %}) const
+{%endif -%} {{ plugin_name.upper_camel_case }}::{{ name.lower_snake_case }}({% for param in params %}{% if param.name.lower_snake_case != "drone_id" %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}{% if not loop.last %}, {% endif %}{% endif %}{% endfor %}) const
 {
-    return _impl->{{ name.lower_snake_case }}({% for param in params %}{{ param.name.lower_snake_case }}{% if not loop.last %}, {% endif %}{% endfor %});
+    return _impl->{{ name.lower_snake_case }}({% for param in params %}{% if param.name.lower_snake_case != "drone_id" %}{{ param.name.lower_snake_case }}{% if not loop.last %}, {% endif %}{% endif %}{% endfor %});
 }
 {% endif %}
