--- a/templates/mavsdk_server/call.j2
+++ b/templates/mavsdk_server/call.j2
@@ -3,7 +3,7 @@ grpc::Status {{ name.upper_camel_case }}(
     const rpc::{{ plugin_name.lower_snake_case }}::{{ name.upper_camel_case }}Request* {% if not params -%} /* request */ {%- else -%} request {%- endif -%},
     rpc::{{ plugin_name.lower_snake_case }}::{{ name.upper_camel_case }}Response* {% if has_result %}response{% else %}/* response */{% endif %}) override
 {
-    if (_lazy_plugin.maybe_plugin() == nullptr) {
+    if (_lazy_plugin.maybe_plugin(request->drone_id()) == nullptr) {
         {% if has_result %}
         if (response != nullptr) {
             auto result = mavsdk::{{ plugin_name.upper_camel_case }}::Result::NoSystem;
@@ -30,16 +30,19 @@ grpc::Status {{ name.upper_camel_case }}(
     {% endfor -%}
 
     {% if is_sync %}
-    {% if has_result %}auto result = {% endif %}_lazy_plugin.maybe_plugin()->{{ name.lower_snake_case }}({% for param in params %}{% if param.type_info.is_repeated %}{{ param.name.lower_snake_case }}_vec{% else %}{% if param.type_info.is_primitive %}request->{{ param.name.lower_snake_case }}(){% else %}translateFromRpc{{ param.type_info.inner_name }}(request->{{ param.name.lower_snake_case }}()){% endif %}{% endif %}{{ ", " if not loop.last }}{% endfor %});
+    {# {% if has_result %}auto result = {% endif %}_lazy_plugin.maybe_plugin(request->drone_id())->{{ name.lower_snake_case }}({% for param in params %}{% if param.type_info.is_repeated %}{{ param.name.lower_snake_case }}_vec{% else %}{% if param.type_info.is_primitive %}request->{{ param.name.lower_snake_case }}(){% else %}translateFromRpc{{ param.type_info.inner_name }}(request->{{ param.name.lower_snake_case }}()){% endif %}{% endif %}{{ ", " if not loop.last }}{% endfor %}); #}
+    {% if has_result %}auto result = {% endif %}_lazy_plugin.maybe_plugin(request->drone_id())->{{ name.lower_snake_case }}({% for param in params %}{% if param.name.lower_snake_case != "drone_id" %}{% if param.type_info.is_repeated %}{{ param.name.lower_snake_case }}_vec{% else %}{% if param.type_info.is_primitive %}request->{{ param.name.lower_snake_case }}(){% else %}translateFromRpc{{ param.type_info.inner_name }}(request->{{ param.name.lower_snake_case }}()){% endif %}{% endif %}{{ ", " if not loop.last }}{% endif %}{% endfor %});
+
+
     {% else %}
     std::promise<{% if has_result %}mavsdk::{{ plugin_name.upper_camel_case }}::Result{% else %}void{% endif %}> prom;
     std::future<{% if has_result %}mavsdk::{{ plugin_name.upper_camel_case }}::Result{% else %}void{% endif %}> fut = prom.get_future();
 
         {% if has_result %}
-    _lazy_plugin.maybe_plugin()->{{ name.lower_snake_case }}_async([&prom](const mavsdk::{{ plugin_name.upper_camel_case }}::Result result){ prom.set_value(result); });
+    _lazy_plugin.maybe_plugin(request->drone_id())->{{ name.lower_snake_case }}_async([&prom](const mavsdk::{{ plugin_name.upper_camel_case }}::Result result){ prom.set_value(result); });
     auto result = fut.get();
         {% else %}
-    _lazy_plugin.maybe_plugin()->{{ name.lower_snake_case }}_async([&prom](){ prom.set_value(); });
+    _lazy_plugin.maybe_plugin(request->drone_id())->{{ name.lower_snake_case }}_async([&prom](){ prom.set_value(); });
     fut.get();
         {% endif %}
     {% endif %}
