--- a/templates/plugin_h/stream.j2
+++ b/templates/plugin_h/stream.j2
@@ -13,7 +13,7 @@ using {{ name.upper_camel_case }}Callback = std::function<void({% if has_result 
 /**
  * @brief {{ method_description | replace('\n', '\n *')}}
  */
-void {% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endfor %}{{ name.upper_camel_case }}Callback callback);
+void {% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{% if param.name.lower_snake_case != "drone_id" %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endif %}{% endfor %}{{ name.upper_camel_case }}Callback callback);
 {% endif %}
 
 {% if is_sync %}
@@ -22,5 +22,5 @@ void {% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if
  *
  * @return One {{ return_type.name }} update.
  */
-{{ return_type.name }} {{ name.lower_snake_case }}({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}{% if not loop.last %}, {% endif %}{% endfor %}) const;
+{{ return_type.name }} {{ name.lower_snake_case }}({% for param in params %}{% if param.name.lower_snake_case != "drone_id" %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}{% if not loop.last %}, {% endif %}{% endif %}{% endfor %}) const;
 {% endif %}
