--- a/templates/plugin_impl_h/stream.j2
+++ b/templates/plugin_impl_h/stream.j2
@@ -1,7 +1,7 @@
 {% if is_async %}
-void {% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endfor %}{{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}Callback callback);
+void {% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{% if param.name.lower_snake_case != "drone_id" %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endif %}{% endfor %}{{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}Callback callback);
 {% endif %}
 
 {% if is_sync %}
-{{ plugin_name.upper_camel_case }}::{{ return_type.name }} {{ name.lower_snake_case }}({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}{% if not loop.last %}, {% endif %}{% endfor %}) const;
+{{ plugin_name.upper_camel_case }}::{{ return_type.name }} {{ name.lower_snake_case }}({% for param in params %}{% if param.name.lower_snake_case != "drone_id" %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}{% if not loop.last %}, {% endif %}{% endif %}{% endfor %}) const;
 {% endif %}
